<resources>
    <string name="app_name">letsMeet</string>
    <string name="action_settings">Settings</string>
    <string name="user_hint">Username</string>
    <string name="pw_hint">Password</string>
    <string name="title_hint">Meet title</string>
    <string name="save_credentials">Save password</string>
    <string name="save_login">Stay logged in</string>
    <string name="login">" Login "</string>
    <string name="logout">Logout</string>
    <string name="signup">" Sign up "</string>
    <string name="new_meet">Create a new Meet</string>
    <string name="description_hint">Description</string>
    <string name="max_guests">Max. guests</string>
    <string name="location_hint">Location</string>
    <string name="account">Account</string>
    <string name="app_ver">App version</string>
    <string name="title_activity_meet">Meet Info</string>
    <string name="new_meet2">Add</string>
    <string name="my_meets">My Meets</string>
    <string name="min_guests">Has to be at least 2</string>
    <string name="enter_title">Title to long or to short</string>
    <string name="enter_description">Description to long or to short</string>
    <string name="enter_location">Location to long or to short</string>
    <string name="github">https://github.com/Christian24/letsmeetApp</string>
    <string name="find_us">Find us on GitHub</string>
    <string name="title">Title</string>
    <string name="date_time">Date</string>
    <string name="author">Author</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="short_username">Username to short</string>
    <string name="short_password">Password to short</string>
    <string name="wrong_credentials">Wrong username or password</string>
    <string name="taken_username">Username already taken</string>
    <string name="delete_account">" Delete account "</string>
    <string name="are_u_sure">Are you sure?</string>
    <string name="delete_account_long">Do you want to delete your account?</string>
    <string name="delete_account_successful">Your account was successfully deleted</string>
    <string name="failed_logout">Logout failed</string>
    <string name="check_connection">Check your internet connection</string>
    <string name="load_categories">Unable to load categories</string>
    <string name="error">An error occurred</string>
    <string name="wrong_password">Wrong password</string>
    <string name="enter_password">Please enter your password</string>
    <string name="change_password">" Change password "</string>
    <string name="change_password_new">Enter a new password</string>
    <string name="password_success">Password changed successfully</string>
    <string name="password_wasnt_changed">Password has not been changed, it doesnt met the rules</string>
    <string name="server_not_accessible">Server is not accessible</string>
    <string name="no_meets">No meets to display</string>
    <string name="future_meet">Meet has to be in the future</string>
    <string name="password_retype">Retype passoword</string>
    <string name="password_retype_error">Passwords dont match</string>
    <string name="all_categories">All categories</string>
    <string name="comment">Comment</string>
    <string name="category">Category</string>
    <string name="commen_hint">Comment...</string>
    <string name="participants">"  Show participants  "</string>
    <string name="ask_question">Ask question</string>
    <string name="ask">Ask</string>
    <string name="question_to_short">Question is to short</string>
    <string name="replies">replies</string>
    <string name="new_meet3">New Meet</string>
    <string name="my_meet">My Meets</string>
    <string name="close">close</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit Meet</string>
    <string name="min_number">Minimum number of participants reached</string>
</resources>
