<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.webwemser.letsmeetapp.CreateActivity"
    tools:showIn="@layout/activity_edit">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="showDatePickerDialog">

        <ImageView
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:src="@drawable/ic_schedule_black_48dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="date"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:id="@+id/datepicker"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="showTimePickerDialog">

        <ImageView
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:src="@drawable/event"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="time"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:id="@+id/timepicker"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/category_spinner">
    </Spinner>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>

    <EditText
        android:id="@+id/meet_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:lines="1"
        android:maxLength="50"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"/>

    <EditText
        android:id="@+id/meet_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location_hint"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:lines="1"
        android:maxLength="50"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"/>

    <EditText
        android:id="@+id/meet_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_hint"
        android:imeOptions="actionNext"
        android:lines="4"
        android:maxLines="4"
        android:maxLength="127"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/max_guests"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        >

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/reduceGuests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_remove_white_48dp"
            android:textColor="@color/white"
            android:background="@drawable/mybutton"
            android:onClick="changeMaxGuests"/>

        <TextView
            android:id="@+id/max_guests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="6"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/addGuests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_add_white_24dp"
            android:textColor="@color/white"
            android:background="@drawable/mybutton"
            android:onClick="changeMaxGuests"/>

    </LinearLayout>

</LinearLayout>